--- a/css/map.css
+++ b/css/map.css
@@ -12,3 +12,17 @@ body {
     height: 100vh;
     width: 100%;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 20vw 80vw;
+    grid-template-rows:     100vh;
+}
+
+.sidebar {
+    margin-left: 15px;
+}
+
+.sidebar h2 {
+    margin: 15px auto;
+}
